# GZCodex

./: .eslintrc.json  .gitignore  Makefile  README.md  docker-compose.yml  go.work  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.husky/_/: husky.sh
apps/admin/: Dockerfile  package.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/tests/: config.test.mjs
apps/agents/: Dockerfile  pyproject.toml  requirements-dev.txt
apps/agents/src/: __init__.py  main.py
apps/agents/tests/: test_health.py
apps/bff/: Dockerfile  package.json  tsconfig.json
apps/bff/src/: index.ts  main.ts  server.ts
apps/bff/tests/: health.test.ts
apps/services/catalog/: .eslintrc.js  Dockerfile  jest.config.js  package.json  tsconfig.json
apps/services/catalog/src/: app.module.ts  catalog.controller.ts  catalog.service.spec.ts  catalog.service.ts  main.ts
apps/services/logistics/: Dockerfile  go.mod
apps/services/orders/: Dockerfile  go.mod
apps/services/payments/: Dockerfile  go.mod
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/pages/: index.tsx
apps/web/tests/: config.test.mjs
db/migrations/: 001_bootstrap.sql
db/seeds/: seed_data.sql
deploy/: docker-compose.yml
deploy/helm/charts/admin/: Chart.yaml  values.yaml
deploy/helm/charts/agents/: Chart.yaml  values.yaml
docs/: spec.md
policies/opa/: pricing.rego
search/opensearch_mappings/: catalog.json
tests/contracts/: README.md
tests/e2e/: README.md
tests/load/: README.md
(+46 files in other folders)
